# rs-algochat

./: .atlasignore  .gitignore  .trust.toml  AGENTS.md  Cargo.toml  README.md  fledge.toml  specsync-registry.toml  specsync.json
.github/workflows/: atlas.yml  ci.yml  release.yml  trust.yml
.specsync/: .gitignore  adoption-report.json  config.toml  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-rust-algochat-implementa/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-rust-algochat-implementa/deltas/: algochat.md  client.md  crate.md  cross-vectors.md  crypto.md  protocol.md  psk.md
examples/: export_envelopes.rs
scripts/: specsync.sh
specs/: algochat.spec.md  crypto.spec.md
specs/client/: client.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/crate/: context.md  crate.spec.md  requirements.md  tasks.md  testing.md
specs/cross-vectors/: context.md  cross-vectors.spec.md  requirements.md  tasks.md  testing.md
specs/proposals/: 0001-aead-header-binding-and-identity-verification.md
specs/protocol/: context.md  protocol.spec.md  requirements.md  tasks.md  testing.md
specs/psk/: context.md  psk.spec.md  requirements.md  tasks.md  testing.md
src/: algochat.rs  blockchain.rs  crypto.rs  envelope.rs  keys.rs  lib.rs  models.rs  psk_crypto.rs  psk_envelope.rs  psk_exchange.rs  psk_ratchet.rs  psk_state.rs  psk_types.rs  queue.rs  signature.rs  storage.rs  types.rs
tests/: cross_impl.rs
