[package]
name = "algochat"
version = "0.1.0"
edition = "2021"
authors = ["CorvidLabs <hello@corvidlabs.com>"]
description = "Rust implementation of the AlgoChat protocol for encrypted messaging on Algorand"
license = "MIT"
repository = "https://github.com/CorvidLabs/rs-algochat"
keywords = ["algorand", "encryption", "messaging", "blockchain", "chacha20"]
categories = ["cryptography", "encoding"]

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
dirs = "5.0"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["sync", "time", "rt", "macros"] }
